--- a/index2.html
+++ b/index2.html
@@ -161,7 +161,7 @@
                 <div class="range-container">
                     <input type="range" name="etat_general" min="0" max="10" value="5" 
                            oninput="document.getElementById('etatValue').textContent = this.value">
-                    <span id="etatValue">5</span>/10
+                    <span id="etatValue">oninput</span>/10
                 </div>
 
                 <label>Date de l'inspection: <span class="error" id="error-date">*</span></label>
