--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             <!-- Boutons pour redirection -->
             <button onclick="window.location.href='scanner.html'">Scanner d'Inspection</button>
             <button onclick="window.location.href='index2.html'">PDF Inspection Préventive</button>
+            <!-- Nouveau bouton Procédure de Garantie -->
+            <button onclick="window.location.href='garantie.html'">Procédure de Garantie</button>
         </div>
     </div>
 
